# ConnectomeUtilities

./: .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS.txt  CONTRIBUTING.md  LICENSE  README.md  configuration_files.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-sdist.yml
conntility/: __init__.py  connectivity.py  multi_scale.py  plugins.py
conntility/analysis/: __init__.py  analysis.py  analysis_decorators.py  clustering.py  diffusion_mapping.py  embed.py  grouping_decorators.py
conntility/circuit_models/: __init__.py  (+4 more)
examples/: C elegans - a non-sonata-based example.ipynb  Connectome utilities - long range connectivity between atlas columns.ipynb  Connectome utilities - long range connectivity between hexes.ipynb  Connectome utilities demo.ipynb  Correlation against distance.ipynb  Edge participation in MICrONS.ipynb  Example 3 - Generating control subsamples and neighborhoods.ipynb  Example 4 - Loading atlas data.ipynb  Example 5 - Connectivity at reduced resolution.ipynb  Example 6 - Plastic matrices.ipynb  Examples 1 and 2 - Analyzing pathways and controls.ipynb  Fly connectome - a non-sonata based example.ipynb  Fly larva - a non-sonata-based example.ipynb  Hunt et al reproductions.ipynb  L23_EXC_sampled_cmat.h5  MICrONS_connectome_inhibitory_innervation.ipynb  Slicing and sampling.ipynb  StructurallyPlasticMatrix.ipynb
loader_config/: example_simple.json  example_simple_grouping.json  more_groups.json
tests/: test_analysis.py  test_analysis_decorator.py  test_connectivity_matrix.py  test_neuron_groups.py  utils.py
(+38 files in other folders)
